--- a/man/pandoc-quotes.1
+++ b/man/pandoc-quotes.1
@@ -67,8 +67,8 @@ quotation\-marks:
 .sp
 You always have to set all four quotation marks.
 .sp
-If each quotation mark consists of precisely one character (it may
-span multiple bytes), you can write the list as a simple string.
+If each quotation mark consists of precisely one character,
+you can write the list as a simple string.
 .sp
 For example:
 .INDENT 0.0
